<resources>
    <string name="album_name">CameraSample</string>
    <string name="app_id">1798887120395380</string>
    <string name="txtString_error_chargement">Erreur !</string>
    <string name="more">Plus</string>
    <string name="app_name">3TECH</string>
    <string name="abc_action_mode_done">OK</string>
    <string name="abc_action_bar_home_description">"Revenir à l'accueil"</string>
    <string name="abc_action_bar_up_description">Revenir en haut de la page</string>
    <string name="abc_action_menu_overflow_description">"Plus d'options"</string>
    <string name="abc_searchview_description_search">Rechercher</string>
    <string name="abc_searchview_description_query">Requête de recherche</string>
    <string name="abc_searchview_description_clear">Effacer la requête</string>
    <string name="abc_searchview_description_submit">Envoyer la requête</string>
    <string name="abc_searchview_description_voice">Recherche vocale</string>
    <string name="abc_activitychooserview_choose_application">Sélectionner une application</string>
    <string name="abc_activity_chooser_view_see_all">Tout afficher</string>
    <string name="abc_shareactionprovider_share_with_application">Partager avec %s</string>
    <string name="abc_shareactionprovider_share_with">Partager avec</string>
    <string name="common_google_play_services_install_title">Installer les services Google Play</string>
    <string name="common_google_play_services_install_text_phone">Cette application ne fonctionnera pas sans les services Google Play, qui ne sont pas installés sur votre téléphone.</string>
    <string name="common_google_play_services_install_text_tablet">Cette application ne fonctionnera pas sans les services Google Play, qui ne sont pas installés sur votre tablette.</string>
    <string name="common_google_play_services_install_button">Installer services Google Play</string>
    <string name="common_google_play_services_enable_title">Activer les services Google Play</string>
    <string name="common_google_play_services_enable_text">"Cette application ne fonctionnera pas tant que vous n'aurez pas activé les services Google Play."</string>
    <string name="common_google_play_services_enable_button">Activer services Google Play</string>
    <string name="common_google_play_services_update_title">Mettre à jour les services Google Play</string>
    <string name="common_google_play_services_update_text">"Cette application ne fonctionnera pas tant que vous n'aurez pas mis à jour les services Google Play."</string>
    <string name="common_google_play_services_network_error_title">Erreur réseau</string>
    <string name="common_google_play_services_network_error_text">"Vous devez disposer d'une connexion de données pour utiliser les services Google Play."</string>
    <string name="common_google_play_services_invalid_account_title">Compte erroné</string>
    <string name="common_google_play_services_invalid_account_text">"Le compte indiqué n'existe pas sur cet appareil. Veuillez sélectionner un autre compte."</string>
    <string name="common_google_play_services_unknown_issue">Problème inconnu avec les services Google Play.</string>
    <string name="common_google_play_services_unsupported_title">Services Google Play</string>
    <string name="common_google_play_services_unsupported_text">"Les services Google Play, dont dépendent certaines de vos applications, ne sont pas compatibles avec votre appareil. Veuillez contacter le fabricant pour obtenir de l'aide."</string>
    <string name="common_google_play_services_unsupported_date_text">"La date sur l'appareil semble incorrecte. Veuillez la vérifier."</string>
    <string name="common_google_play_services_update_button">Mettre à jour</string>
    <string name="common_signin_button_text">Connexion</string>
    <string name="common_signin_button_text_long">Se connecter avec Google</string>
    <string name="auth_client_using_bad_version_title">Une application requiert une version valide des services Google Play</string>
    <string name="auth_client_needs_enabling_title">"Une application requiert l'activation des services Google Play"</string>
    <string name="auth_client_needs_installation_title">"Une application requiert l'installation des services Google Play"</string>
    <string name="auth_client_needs_update_title">Une application requiert la mise à jour des services Google Play</string>
    <string name="auth_client_play_services_err_notification_msg">Erreur liée aux services Google Play</string>
    <string name="auth_client_requested_by_msg">Demandée par %1$s</string>
    <string name="header">NOM PRENOM</string>
    <string name="action_settings">Settings</string>
    <string name="clear" />
    <string name="txtPopProfil_textViewelementsConfianceTitle">Marques de confiance validées</string>
    <string name="txtPopProfil_textViewelementsConfianceUser">Marques de confiance</string>
    <string name="add">Ajouter</string>
    <string name="list">Liste</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="search">Recherche</string>
    <string name="update">Update</string>
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>
    <string name="txtTextViewDialog">Change in progress...</string>
    <string name="txtMenu_dialogChargement">Loading ...</string>
    <string name="xlistview_header_hint_normal">rafraîchissement déroulant</string>
    <string name="xlistview_header_hint_ready">"Désserrer l'actualisation des données"</string>
    <string name="xlistview_header_hint_loading">Chargement en cours ...</string>
    <string name="xlistview_header_last_time">Dernière mise à jour:</string>
    <string name="xlistview_footer_hint_normal">En savoir plus</string>
    <string name="xlistview_footer_hint_ready">Desserrer Chargement plus</string>
    <string name="p2refresh_head_load_more">Chargez plus</string>
    <string name="p2refresh_end_load_more">plus</string>
    <string name="p2refresh_end_click_load_more">Chargez plus</string>
    <string name="p2refresh_release_refresh">Désserrer rafraîchissement</string>
    <string name="p2refresh_pull_to_refresh">rafraîchissement déroulant</string>
    <string name="p2refresh_doing_head_refresh">rafraîchissement…</string>
    <string name="p2refresh_doing_end_refresh">chargement…</string>
    <string name="p2refresh_refresh_lasttime">dernière mise à jour  : </string>
    <string name="image_desc">image</string>
    <string name="ver">版本: v1.0.0</string>
    <string name="size">大小: 13MB</string>
    <string name="mgr">管理</string>
    <string name="name">应用Demo</string>
    <string name="menu_simple_search">Recherche</string>
    <string name="menu_map">Carte</string>
    <string name="menu_advanced_search">Recherche avancée</string>
    <string name="menu_Refresh">Rafraîchir</string>
    <string name="menu_help">Help</string>
    <string name="select_string">Choisir un thème</string>
    <string name="txtDetailSrvc_textViewTitleHeader">Offre et propositions</string>
    <string name="txtDetailMissionSrvc_textViewPseudo" />
    <string name="txtDetailSrvc_textViewIlya">il y a</string>
    <string name="txtDetailSrvc_textJours">jours</string>
    <string name="txtDetailSrvc_textMois">mois</string>
    <string name="txtDetailSrvc_textHeure">h</string>
    <string name="txtDetailSrvc_textMinute">mn</string>
    <string name="txtDetailSrvc_textViewCatSubCat" />
    <string name="txtDetailSrvc_textViewDescription" />
    <string name="txtDetailSrvc_textSignalerUnAbbus">Signaler abus</string>
    <string name="txtDetailSrvc_textViewSuivreMission">Suivre</string>
    <string name="txtDetailSrvc_textViewFormeValueS">Oui</string>
    <string name="txtDetailSrvc_textViewFormeValue">Un autre livre</string>
    <string name="txtDetailSrvc_textViewDureeLibelle">Durée:</string>
    <string name="txtDetailSrvc_textViewHeureDepartLibelle">Heure départ:</string>
    <string name="txtDetailSrvc_textView">Un autre livre</string>
    <string name="txtDetailSrvc_textViewEcheance">Echéance:</string>
    <string name="txtDetailSrvc_textViewEcheanceValue">5 mn</string>
    <string name="txtDetailSrvc_textViewtStatut">En recherche</string>
    <string name="txtDetailSrvc_textViewEchangeContre">Echange contre:</string>
    <string name="txtDetailSrvc_textViewEchangePret">Prêt</string>
    <string name="txtDetailSrvc_textViewEchangeDon">Don</string>
    <string name="txtDetailSrvc_textViewEchangeAideGratuite">Aide gratuite</string>
    <string name="txtDetailSrvc_textViewRemunerationObligatoire">Rémunéra.:</string>
    <string name="txtDetailSrvc_textViewRemunerationObligatoireOui">Oblig.</string>
    <string name="txtDetailSrvc_textViewRemunerationObligatoireNon">Option.</string>
    <string name="txtDetailSrvc_textViewDureeEnMois">mois</string>
    <string name="txtDetailSrvc_textViewMontantRecherche">Montant recherché:</string>
    <string name="txtDetailSrvc_textViewDureeSouhaiteLibelle">Durée souhaitée:</string>
    <string name="txtDetailSrvc_textViewDureeSouhaiteValue">5 mois</string>
    <string name="txtDetailSrvc_textViewEchangePrix">Budget:</string>
    <string name="txtDetailSrvc_viewChatOuSeparator" />
    <string name="txtDetailSrvc_viewChatDate">20/06/2014</string>
    <string name="txtDetailMission_evenementAproposeUneOffreDe">a proposé un échange</string>
    <string name="txtDetailMission_evenementAAnnulerUneOffreDe">a annulé son offre</string>
    <string name="txtDetailMission_evenementAAnnulerUneOffreDee">a annulé une offre de</string>
    <string name="txtDetailMission_evenementAAccepteUneOffreDe">a approuvé une offre de</string>
    <string name="txtDetailMission_evenementARejeteUneOffreDe">a rejeté une offre de</string>
    <string name="txtDetailMission_evenementEstEnChatPriveAvec">est en conversation privée avec</string>
    <string name="txtDetailMission_evenementASupprimeUneOffreDe">a annulé une offre</string>
    <string name="txtDetailMission_evenementASupprimeSonOffre">a annulé son offre</string>
    <string name="idDetailMission_textViewPseudo">Pseudo</string>
    <string name="txtDetailMission_buttonAccepterOffre">Accepter</string>
    <string name="txtDetailSrvc_textViewAdresse">Adresse:</string>
    <string name="txtDetailSrvc_textViewVille">Ville:</string>
    <string name="txtDetailSrvc_textViewDistanceA" />
    <string name="txtOffre_editTextMessagePrive">Envoyer un message privé pour augmenter vos chances</string>
    <string name="txtOffreDialog_textViewAnnuler">Annuler</string>
    <string name="txtOffreDialog_textViewValider">Valider</string>
    <string name="txtOffreDialog_editTextContre">Contre</string>
    <string name="txtOffreDialog_textViewForme">Forme</string>
    <string name="txtOffreDialog_textViewContre">contre</string>
    <string name="txt_mission_row_description" />
    <string name="txt_mission_row_description_khod">Khod:</string>
    <string name="txt_mission_row_description_Ara">Ara:</string>
    <string name="facebook_label">Facebook</string>
    <string name="header_log_in">Se connecter</string>
    <string name="header_log_in_email">Continuer avec mon email</string>
    <string name="header_log_in_reset">Mot de passe oublié</string>
    <string name="a3tech_no_account_signin">vous n\'avez pas de compte?</string>
    <string name="a3tech_no_account_signin_2"><u>s\'inscrire</u></string>
    <string name="title_mission_header">Titre</string>
    <string name="hint_title_mission">Qu\'avez-vous besoin de faire ?</string>
    <string name="description_mission_header">Description</string>
    <string name="hint_description_mission">Ajouter plus de détails</string>
    <string name="date_mission_header">Date intervention</string>
    <string name="hint_date_mission">Date d\'intervention</string>
    <string name="location_mission_header">Adresse</string>
</resources>