<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/ic_list"
        android:title="@string/list"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_map"
                android:icon="@drawable/ic_action_map1"
                android:showAsAction="never"
                android:title="@string/menu_map"/>
            <item
                android:id="@+id/menu_ssearch"
                android:icon="@drawable/ic_action_search1"
                android:showAsAction="never"
                android:title="@string/menu_simple_search"/>
            <item
                android:id="@+id/menu_refresh"
                android:icon="@drawable/ic_action_refresh1"
                android:showAsAction="never"
                android:title="@string/menu_Refresh"/>
        </menu>
    </item>

</menu>