<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_info_bubble" >

    <LinearLayout
        android:id="@+id/mission_row_category_picto_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/image_bg"
        android:gravity="center_horizontal"
        android:padding="3.0dip" >

        <ImageView
            android:id="@+id/mission_row_profil_picto"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:contentDescription="@string/clear"
            android:gravity="center"
            android:src="@drawable/logo_portrait" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mission_row_infos_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_toRightOf="@id/mission_row_category_picto_ll"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:singleLine="true"
                android:text="@string/txt_mission_row_description_khod"
                android:textColor="@color/khod"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mission_row_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_mission_row_description"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/txt_mission_row_description_Ara"
                android:textColor="@color/ara"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mission_row_posted_forme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>